# CDHAI-HAPF

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: sample_cgm.yaml
docs/: architecture.md  data_governance.md  literature_review.md  proof_of_concept.md  references.bib  research_protocol.md  sample_data_audit.md
scripts/: run_cross_validation.py  run_sample_experiment.py
src/hapf/: __init__.py  config.py
src/hapf/data/: __init__.py  cgm.py
src/hapf/evaluation/: __init__.py  metrics.py
src/hapf/models/: __init__.py  adapters.py  backbone.py  forecaster.py
src/hapf/training/: __init__.py  cross_validation.py  engine.py  experiment.py
tests/: test_adapter.py  test_cross_validation.py  test_data.py  test_metrics.py  test_model.py
