[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cdhai-hapf"
version = "0.1.0"
description = "Hierarchical low-rank personalization for patient time-series forecasting"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "CDHAI-HAPF contributors" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15",
  "PyYAML>=6.0",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.6",
]
plots = ["matplotlib>=3.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/hapf"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["hapf"]
